Fixed a bug with buttons being incorrect size on the library page. Stuck first pieces of game info into cards on the ShowMoreInfo page.

--- a/src/SteamProject/wwwroot/css/Library.css
+++ b/src/SteamProject/wwwroot/css/Library.css
@@ -50,7 +50,8 @@
     transition: all 1s ease;
 }
 
-.gameContainer:hover > .hide-btn, .gameContainer:hover > .follow-btn, .gameContainer:hover > .achievement-btn, .gameContainer:hover > .show-btn, .gameContainer:hover > .refresh-btn {
+.gameContainer:hover > .hide-btn, .gameContainer:hover > .follow-btn, .gameContainer:hover > .achievement-btn, 
+.gameContainer:hover > .show-btn, .gameContainer:hover > .refresh-btn {
     opacity: 35%;
 }
 
